# signals

./: CMakeLists.txt  Connection.cpp  Connection.h  Signal.cpp  Signal.h  Signal_test.cpp
